src/test/deca/syntax/valid/created/sans_objet/fake_bool.deca
// Résultat erreur:
//    
//
// Description:
//    Tests de programme incorrect contextuellement 
//
// Auteur:
//    Eliott
//
// Historique:
//    Créé le 22/01/2024

{
    boolean condition = falsee;
}